--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Upload helm artifacts
         if: github.ref_name == 'main'
-        uses: actions/upload-artifact@4
+        uses: actions/upload-artifact@v4
         with:
           name: helm-artifacts
           path: ${{ github.workspace }}/helm-chart
