--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -116,7 +116,7 @@ jobs:
       run: helm package ./todoapp/
 
     - name: Upload Helm artifact
-      uses: actions/upload-artifacts@v4
+      uses: actions/upload-artifact@v4
       with:
         name: helm-package
         path: ./*.tgz
